--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
     "jsx-a11y/anchor-is-valid": 0,
     "max-len": ["error", { "code": 120 }],
     "comma-dangle": ["error", "never"],
-    "arrow-parens": ["error", "as-needed"]
+    "arrow-parens": ["error", "as-needed"],
+    "spaced-comment": 0,
+    "no-undef": 0
   }
 }
